2017-06-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_section_level),
	* tp/Texinfo/Structuring.pm (section_level): Move function to
	Structuring.pm.

2017-06-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi): Do not add 'level' value
	on sectioning commands.
	* tp/Texinfo/Structuring.pm (sectioning_structure): Add 'level' 
	value on element.
	* tp/Texinfo/Convert/HTML.pm (_convert_heading_command),
	* tp/Texinfo/Convert/Text.pm (heading):
	Account for the case when 'level' is not set.
	* texi2any.pl: Remove a comment.

2017-06-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line) <@copying>: Removing handling
	of INLINE_INSERTCOPYING variable.  Also remove from the module 
	documentation section at the end of the file.
	(%default_customization_variables): Remove INLINE_INSERTCOPYING.
	* tp/Texinfo/Parser.pm (@variable_string_settables)
	(@obsolete_variables): Move 'INLINE_INSERTCOPYING' to 
	@obsolete_variables.
	* tp/t/plaintext_tests.t (inline_copying_inline_and_paragraph):
	Remove.
	* NEWS: Mention removal.
	* doc/texinfo.texi (Other Customization Variables) 
	<INLINE_INSERTCOPYING>: Remove.

2017-06-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_text_to_lines): Do not return an array 
	containing a single empty string if the input is an empty 
	string; instead, return a completely empty array.  This means
	that parse_texi_line does not get as far into parsing for an
	empty input.
	
2017-06-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm <root commands>: Do not associate a @part 
	command with a following sectioning command if another @part 
	command appears first.  This means there is no special support
	for @part pages following each other immediately.

2017-06-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Timeout-test.inc,
	* info/t/Init-test.inc (timeout-test): Move code to timeout the
	test to a shell function.
